Web MIDI: restore sysex receiving buffer synchronously

The new backend restores sysex receiving buffer asynchronously,
but it turned out that this way causes a receiving data loss on
receiving continuous sysex messages.

The original backend did it synchronously and didn't have such
problem. So let me fix the new backend to take the same approach.

BUG=730647

Review-Url: https://codereview.chromium.org/2926143003
Cr-Commit-Position: refs/heads/master@{#477807}

Former-commit-id: 1814e6af281cd1f00ddf0705c01e2484708b0e4d